2008-10-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Implement support for the
	  ShutdownCommand SM property in XfsmManager.  The spec says
	  this command should be run on manager shutdown for clients
	  that have set RestartAnyway as their restart hint AND have
	  already quit.

2008-10-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-client.c,xfsm-properties.*}: Implement
	  support for storing/retrieving the SmProcessID,
	  SmResignCommand, and SmShutdownCommand SM properties.  The
	  latter two will be needed for SmRestartAnyway support.

2008-10-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{xfsm-client.c,xfsm-properties.*}: Move some
	  properties manipulation functions from xfsm-client.c to
	  xfsm-properties.c

2008-10-06	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Make D-Bus a hard dependency.
	* xfce4-session/Makefile.am: Add xfsm-error.* and D-Bus stuff to the
	  build.
	* xfce4-session/{xfsm-manager-dbus.xml,xfsm-client-dbus.xml}: Add
	  D-Bus interface introspection files.
	* xfce4-session/shutdown.*: Make the shutdown type a real enum,
	  and add values for 'ask', 'suspend', and 'hibernate'.
	* xfce4-session/xfsm-shutdown-helper.*: Make sure the shutdown
	  types/commands don't clash with shutdown.h.
	* xfce4-session/xfsm-global.*: Add some GValue convenience
	  functions.
	* xfce4-session/xfsm-error.*: Add XfsmError type, and register the
	  error domain with D-Bus.
	* xfce4-session/{xfsm-manager.*,xfsm-client.*}: Implement D-Bus
	  server for org.xfce.Session.Manager and org.xfce.Session.Client.
	* xfce4-session/main.c: Hook up some D-Bus stuff.
	* po/POTFILES.in: Add xfsm-manager.c and xfsm-client.c to POTFILES.

2008-10-04	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Add signals to XfsmManager.

2008-10-04	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{sm-layer.c,xfsm-client.*,xfsm-properties.*}: